add hello wrapper inside the header, and added backgound image

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <!-- navbar-wrapper -->
-      <div class="navbar-wrapper">
+      <!-- wrapper -->
+      <div class="wrapper">
         <!-- navbar-logo -->
         <div class="navbar-logo">
           <a href="#">
@@ -29,13 +29,13 @@
           <a href="#">login</a>
         </div>
       </div>
+      <!-- primo box -->
+      <div class="hello-wrapper">
+        <div class="hello-box bg-pink"></div>
+      </div>
     </header>
 
     <main>
-      <!-- primo box -->
-      <div class="hello-wrapper bg-blue">
-        <div class="hello-box bg-pink"></div>
-      </div>
       <!-- secondo box -->
       <div class="hello-wrapper bg-white">
         <div class="hello-box">
