add logo discord in header

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <!-- wrapper -->
-      <div class="wrapper">
+      <!-- navbar-wrapper -->
+      <div class="navbar-wrapper">
         <!-- navbar-logo -->
         <div class="navbar-logo">
-          <a href="#">
-            <img src="logo-discord.png" alt="logo" />
+          <a href="https://discord.com/" target="_blank">
+            <img src="/img/logo.svg" alt="logo discord" />
           </a>
         </div>
         <!-- navbar-link -->
