added more font property to the header

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </div>
         <!-- navbar-link -->
         <div class="navbar-link">
-          <a href="#">link1 </a>
-          <a href="#">link2 </a>
-          <a href="#">link3 </a>
-          <a href="#">link4 </a>
-          <a href="#">link5 </a>
+          <a href="#">Scarica </a>
+          <a href="#">Perchè Discord</a>
+          <a href="#">Nitro </a>
+          <a href="#">Sicurezza </a>
+          <a href="#">Assistenza </a>
         </div>
         <!-- navbar-login -->
-        <div class="navbar-login">
-          <a href="#">login</a>
+        <div class="navbar-login cl-black">
+          <a href="#">Accedi</a>
         </div>
       </div>
       <!-- primo box -->
