aggiunta link nella barra di navigazione e colore nero al font del tasto accedi

--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
   </head>
   <body>
     <header>
-      <!-- navbar-wrapper -->
+      <!-- contenitore barra di navigazione -->
       <div class="navbar-wrapper">
-        <!-- navbar-logo -->
+        <!-- logo -->
         <div class="navbar-logo">
           <a href="https://discord.com/" target="_blank">
             <img src="/img/logo.svg" alt="logo discord" />
           </a>
         </div>
-        <!-- navbar-link -->
+        <!-- link -->
         <div class="navbar-link">
-          <a href="#">Scarica </a>
-          <a href="#">Perchè Discord</a>
-          <a href="#">Nitro </a>
-          <a href="#">Sicurezza </a>
-          <a href="#">Assistenza </a>
+          <a href="https://discord.com/download" target="_blank"> Scarica </a>
+          <a href="https://discord.com/servers" target="_blank"
+            >Perchè Discord
+          </a>
+          <a href="https://discord.com/nitro" target="_blank">Nitro </a>
+          <a href="https://discord.com/safety" target="_blank">Sicurezza </a>
+          <a href="https://support.discord.com/hc/" target="_blank"
+            >Assistenza
+          </a>
         </div>
         <!-- navbar-login -->
         <div class="navbar-login cl-black">
