--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header>
-      <!-- contenitore barra di navigazione -->
+      <!-- Barra di navigazione -->
       <div class="navbar-wrapper">
-        <!-- logo -->
+        <!-- Logo -->
         <div class="navbar-logo">
           <a href="https://discord.com/" target="_blank">
             <img src="/img/logo.svg" alt="logo discord" />
           </a>
         </div>
-        <!-- link -->
+        <!-- Link -->
         <div class="navbar-link">
           <a href="https://discord.com/download" target="_blank"> Scarica </a>
           <a href="https://discord.com/servers" target="_blank"
@@ -28,9 +28,9 @@
             >Assistenza
           </a>
         </div>
-        <!-- navbar-login -->
+        <!-- Login -->
         <div class="navbar-login cl-black">
-          <a href="#">Accedi</a>
+          <a href="https://discord.com/channels/@me" target="_blank">Accedi</a>
         </div>
       </div>
       <!-- primo box -->
