aggiunta testo nel primo box hello

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
       </div>
       <!-- primo box -->
       <div class="hello-wrapper">
-        <div class="hello-box bg-pink"></div>
+        <div class="hello-box">
+          <h1>Il tuo posto per parlare</h1>
+          <p>
+            Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
+            artistica mondiale, <br />
+            o semplicemente di un piccolo gruppo di amici che vuole passare il
+            tempo assieme,<br />
+            Discord rende più facile chiacchierare ogni giorno e ritrovarsi più
+            spesso.
+          </p>
+        </div>
       </div>
     </header>
 
