--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
       <!-- primo box -->
       <div class="hello-wrapper">
         <div class="hello-box">
-          <h1>Il tuo posto per parlare</h1>
-          <p>
-            Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
-            artistica mondiale, <br />
-            o semplicemente di un piccolo gruppo di amici che vuole passare il
-            tempo assieme,<br />
-            Discord rende più facile chiacchierare ogni giorno e ritrovarsi più
-            spesso.
-          </p>
+          <section class="hello-text">
+            <h1>Il tuo posto per parlare</h1>
+            <p>
+              Che tu faccia parte di un club scolastico, gruppo di gamer,
+              comunità artistica mondiale, <br />
+              o semplicemente di un piccolo gruppo di amici che vuole passare il
+              tempo assieme,<br />
+              Discord rende più facile chiacchierare ogni giorno e ritrovarsi
+              più spesso.
+            </p>
+          </section>
+          <section class="hello-buttons"></section>
         </div>
       </div>
     </header>
