--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
               più spesso.
             </p>
           </section>
-          <section class="hello-buttons"></section>
+          <section class="hello-buttons">
+            <div>
+              <button class="bg-white">Scarica per Mac</button>
+            </div>
+            <div>
+              <button class="bg-black-dark cl-white">
+                Apri Discord nel tuo browser
+              </button>
+            </div>
+          </section>
         </div>
       </div>
     </header>
