add freccia con simboli in html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </section>
           <section class="hello-buttons">
             <div>
-              <button class="bg-white">Scarica per Mac</button>
+              <button class="bg-white">&#8595;Scarica per Mac</button>
             </div>
             <div>
               <button class="bg-black-dark cl-white">
