--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Discord</title>
   </head>
@@ -49,7 +56,9 @@
           </section>
           <section class="hello-buttons">
             <div>
-              <button class="bg-white">&#8595;Scarica per Mac</button>
+              <button class="bg-white">
+                <i class="fa-solid fa-arrow-down"></i> Scarica per Mac
+              </button>
             </div>
             <div>
               <button class="bg-black-dark cl-white">
