--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <!-- secondo box -->
       <div class="hello-wrapper bg-white">
         <div class="hello-box">
-          <div class="box bg-azzurro flex-7"></div>
-          <div class="box bg-rosa-scuro flex-5"></div>
+          <div class="box box-img flex-7"></div>
+          <div class="box-txt bg-rosa-scuro flex-5"></div>
         </div>
       </div>
       <!-- terzo boxe -->
