add text nel secondo box

--- a/index.html
+++ b/index.html
@@ -71,11 +71,23 @@
     </header>
 
     <main>
-      <!-- secondo box -->
+      <!-- box -->
       <div class="wrapper">
         <div class="box">
-          <div class="box box-img flex-7"></div>
-          <div class="box-txt bg-rosa-scuro flex-5"></div>
+          <div class="box-img"></div>
+          <div class="box-txt">
+            <h1>
+              Un luogo a invito <br />
+              con tutto lo<br />
+              spazio<br />necessario per<br />parlare
+            </h1>
+            <p>
+              I server Discord sono organizzati in canali <br />
+              tematici in cui puoi collaborare, condividere o<br />
+              semplicemente parlare della tua giornata<br />senza intasare una
+              chat di gruppo.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -108,7 +120,7 @@
           <div class="box bg-celeste flex-2 brd-white"></div>
         </div>
       </div>
-      -->
+       -->
     </main>
     <footer class="bg-black">
       <!-- bar al pie di pagina -->
