--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- box -->
       <div class="wrapper">
         <div class="box">
-          <div class="box-img"></div>
+          <div class="box-img item-1"></div>
           <div class="box-txt">
             <h1>
               Un luogo a invito <br />
@@ -86,6 +86,24 @@
               tematici in cui puoi collaborare, condividere o<br />
               semplicemente parlare della tua giornata<br />senza intasare una
               chat di gruppo.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- box -->
+      <div class="wrapper">
+        <div class="box">
+          <div class="box-img item-3"></div>
+          <div class="box-txt">
+            <h1>
+              Da pochi a un<br />
+              fandom
+            </h1>
+            <p>
+              Dai inizio a una community di qualsiasi <br />
+              dimensione con strumenti di moderazione e <br />
+              accesso ai membri personalizzabile.<br />Concedi ai membri poteri
+              speciali, crea <br />canali privati, e molto altro.
             </p>
           </div>
         </div>
