--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </header>
 
     <main>
-      <!-- box -->
+      <!-- box-item-2 -->
       <div class="wrapper">
         <div class="box">
-          <div class="box-img item-1"></div>
+          <div class="item-1"></div>
           <div class="box-txt">
             <h1>
               Un luogo a invito <br />
@@ -90,10 +90,24 @@
           </div>
         </div>
       </div>
-      <!-- box -->
+      <!-- box-item-2 -->
       <div class="wrapper">
         <div class="box">
-          <div class="box-img item-3"></div>
+          <div class="box-txt">
+            <h1>Dove trovarsi è<br />facile</h1>
+            <p>
+              Mettiti comodo in un canale vocale quando<br />hai tempo. Gli
+              amici nel tuo servono possono<br />
+              vedere che sei lì e unirsi istantanemente<br />senza dover
+              chiamare.
+            </p>
+          </div>
+          <div class="item-2"></div>
+        </div>
+      </div>
+      <!-- box-item-3 -->
+      <div class="wrapper">
+        <div class="box">
           <div class="box-txt">
             <h1>
               Da pochi a un<br />
@@ -106,8 +120,10 @@
               speciali, crea <br />canali privati, e molto altro.
             </p>
           </div>
+          <div class="item-3"></div>
         </div>
       </div>
+      <!-- box-item-4 -->
 
       <!-- terzo boxe 
       <div class="wrapper bg-grey">
