--- a/index.html
+++ b/index.html
@@ -126,9 +126,18 @@
       <!-- box-item-4 -->
       <div class="wrapper">
         <div class="r-box">
+          <div class="flex-2">
+            <h1>Tecnologia affidabile per tenersi in contatto</h1>
+          </div>
+          <div class="flex-2">
+            <p>
+              Video e audio a bassa latenza ti faranno sentire come se foste
+              tutti nella stessa stanza. Fai ciao in video, guarda <br />gli
+              amici giocare in streaming, o riunitevi in una sessione di disegno
+              con la condivisione schermo.
+            </p>
+          </div>
           <div class="flex-4"></div>
-          <div class="flex-2"></div>
-          <div class="flex-2"></div>
           <div class="flex-2"></div>
           <div class="flex-2"></div>
         </div>
