--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         </div>
       </div>
       <!-- box-item-4 -->
-      <div class="wrapper">
+      <div class="wrapper-big">
         <div class="r-box">
-          <div class="flex-2">
+          <div class="flex-1">
             <h1>Tecnologia affidabile per tenersi in contatto</h1>
           </div>
-          <div class="flex-2">
+          <div class="flex-1">
             <p>
               Video e audio a bassa latenza ti faranno sentire come se foste
               tutti nella stessa stanza. Fai ciao in video, guarda <br />gli
@@ -137,9 +137,9 @@
               con la condivisione schermo.
             </p>
           </div>
-          <div class="flex-4"></div>
-          <div class="flex-2"></div>
-          <div class="flex-2"></div>
+          <div class="item-4"></div>
+          <!-- <div class="flex-2"></div> -->
+          <!-- <div class="flex-2"></div> -->
         </div>
       </div>
     </main>
