--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
             </p>
           </div>
           <div class="item-4"></div>
-          <!-- <div class="flex-2"></div> -->
-          <!-- <div class="flex-2"></div> -->
+          <div class="logo-stars"></div>
+          <div class="flex-1">
+            <h2>Pronto a iniziare la tua avventura?</h2>
+          </div>
         </div>
       </div>
     </main>
