aggiunta scritta sopra logo stelle

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             </p>
           </div>
           <div class="item-4"></div>
-          <div class="logo-stars"></div>
-          <div class="flex-1">
+          <div class="logo-stars">
             <h2>Pronto a iniziare la tua avventura?</h2>
           </div>
+          <div class="flex-1"></div>
         </div>
       </div>
     </main>
