--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
           <div class="logo-stars">
             <h2>Pronto a iniziare la tua avventura?</h2>
           </div>
-          <div class="flex-1"></div>
+          <div class="flex-1">
+            <button class="bg-azzurro cl-white">
+              <i class="fa-solid fa-arrow-down"></i> Scarica per Mac
+            </button>
+          </div>
         </div>
       </div>
     </main>
