inizio footer con bottone e divisone sezioni

--- a/index.html
+++ b/index.html
@@ -149,20 +149,18 @@
         </div>
       </div>
     </main>
+    <!---------------------------------------------------------->
     <footer class="bg-black">
-      <!-- bar al pie di pagina -->
-      <div class="bar bg-celeste-chiaro">
-        <!-- logo -->
-        <div class="logo">
-          <a href="#">
-            <img src="logo-discord.png" alt="logo" />
-          </a>
-        </div>
-        <!-- bottone -->
+      <!-- Info -->
+      <section class="info"></section>
+      <!--------------------------- Barra-------------------------- -->
+      <section class="bar bg-celeste-chiaro">
+        <div class="logo"></div>
         <div class="bottone">
-          <p>bottone</p>
+          <button class="bg-azzurro cl-black">Registrati</button>
         </div>
-      </div>
+      </section>
+      <!---------------------------------------------------------------->
     </footer>
   </body>
 </html>
