modiffiche al bottone nel footer

--- a/index.html
+++ b/index.html
@@ -154,10 +154,14 @@
       <!-- Info -->
       <section class="info"></section>
       <!--------------------------- Barra-------------------------- -->
-      <section class="bar bg-celeste-chiaro">
-        <div class="logo"></div>
+      <section class="bar">
+        <div class="logo">
+          <a href="https://discord.com/" target="_blank">
+            <img src="/img/logo.svg" alt="logo discord" />
+          </a>
+        </div>
         <div class="bottone">
-          <button class="bg-azzurro cl-black">Registrati</button>
+          <button class="bg-azzurro cl-black registrati">Registrati</button>
         </div>
       </section>
       <!---------------------------------------------------------------->
