add linea sopra logo e button-registrati

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
       <!-- Info -->
       <section class="info"></section>
       <!--------------------------- Barra-------------------------- -->
+      <section class="line bg-blue"></section>
       <section class="bar">
         <div class="logo">
           <a href="https://discord.com/" target="_blank">
@@ -161,7 +162,7 @@
           </a>
         </div>
         <div class="bottone">
-          <button class="bg-azzurro cl-black registrati">Registrati</button>
+          <button class="bg-blue cl-white registrati">Registrati</button>
         </div>
       </section>
       <!---------------------------------------------------------------->
