completamento sezione line e sezione bar, aggiunto html sezione info

--- a/index.html
+++ b/index.html
@@ -149,11 +149,15 @@
         </div>
       </div>
     </main>
-    <!---------------------------------------------------------->
     <footer class="bg-black">
       <!-- Info -->
-      <section class="info"></section>
-      <!--------------------------- Barra-------------------------- -->
+      <section class="info">
+        <section class="contatti"></section>
+        <section class="prodotto"></section>
+        <section class="compagnia"></section>
+        <section class="risorse"></section>
+        <section class="norme"></section>
+      </section>
       <section class="line bg-blue"></section>
       <section class="bar">
         <div class="logo">
@@ -165,7 +169,6 @@
           <button class="bg-blue cl-white registrati">Registrati</button>
         </div>
       </section>
-      <!---------------------------------------------------------------->
     </footer>
   </body>
 </html>
