aggiunte liste nella sezione info

--- a/index.html
+++ b/index.html
@@ -152,11 +152,57 @@
     <footer class="bg-black">
       <!-- Info -->
       <section class="info">
-        <section class="contatti"></section>
-        <section class="prodotto"></section>
-        <section class="compagnia"></section>
-        <section class="risorse"></section>
-        <section class="norme"></section>
+        <section class="contatti">
+          <h3>
+            Il tuo posto per <br />
+            parlare
+          </h3>
+        </section>
+        <section class="prodotto">
+          <ul>
+            <li>Prodotto</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </section>
+        <section class="compagnia">
+          <ul>
+            <li>Compagnia</li>
+            <li>Chi siamo</li>
+            <li>Lavora con noi</li>
+            <li>Marchio</li>
+            <li>Redazione</li>
+            <li>Negozio</li>
+          </ul>
+        </section>
+        <section class="risorse">
+          <ul>
+            <li>Risorse</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </section>
+        <section class="norme">
+          <ul>
+            <li>Norme</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </section>
       </section>
       <section class="line bg-blue"></section>
       <section class="bar">
