aggiunte icone social, italian-flag e titolo-sezione

--- a/index.html
+++ b/index.html
@@ -153,10 +153,34 @@
       <!-- Info -->
       <section class="info">
         <section class="contatti">
-          <h3>
-            Il tuo posto per <br />
-            parlare
-          </h3>
+          <div class="titolo-sezione">
+            <p>
+              Il tuo posto per <br />
+              parlare
+            </p>
+          </div>
+            
+            <li>
+              <button>
+                <img src="/img/ita.png" alt="tasto selezione lingue" />
+              </button>
+            </li>
+          <ul>
+            <li>
+              <li>
+                  <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+              </li>
+            </li>
+          </ul>
         </section>
         <section class="prodotto">
           <ul>
