--- a/index.html
+++ b/index.html
@@ -153,34 +153,31 @@
       <!-- Info -->
       <section class="info">
         <section class="contatti">
-          <div class="titolo-sezione">
+          <div class="descrizione-sezione-contatti">
             <p>
               Il tuo posto per <br />
               parlare
             </p>
           </div>
-            
-            <li>
-              <button>
-                <img src="/img/ita.png" alt="tasto selezione lingue" />
-              </button>
-            </li>
-          <ul>
-            <li>
-              <li>
-                  <a href=""><i class="fa-brands fa-twitter"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-              </li>
-            </li>
-          </ul>
+          <div class="language">
+            <button>
+              <img src="/img/ita.png" alt="tasto selezione lingue" />
+            </button>
+          </div>
+          <div class="social-networks">
+            <div class="twitter">
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+            <div class="instagram">
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </div>
+            <div class="facebook">
+              <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+            </div>
+            <div class="youtube">
+              <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
         </section>
         <section class="prodotto">
           <ul>
