aggiunto tutti gli item, solo modificare layout

--- a/index.html
+++ b/index.html
@@ -160,9 +160,12 @@
             </p>
           </div>
           <div class="language">
-            <button>
+            <div class="flag">
               <img src="/img/ita.png" alt="tasto selezione lingue" />
-            </button>
+            </div>
+            <div class="language-flag">
+              <h5>Italiano</h5>
+            </div>
           </div>
           <div class="social-networks">
             <div class="twitter">
