--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
             <div class="language-flag">
               <h5>Italiano</h5>
             </div>
+            <div class="triangle-down">
+              <i class="fa-solid fa-caret-down"></i>
+            </div>
           </div>
           <div class="social-networks">
             <div class="twitter">
